# school-management

./: .env  pyproject.toml
src/: main.py
src/config/auth/: auth.py
src/config/database/: connection.py  session.py
src/config/security/: security.py
src/controlleries/: login.py  student.py  teacher.py  user.py  user_controller.py
src/controllers/: user.py
src/mappers/: student_mapper.py  teacher_mapper.py  user_mapper.py
src/models/: person.py  student.py  teacher.py  user.py
src/repositories/: student.py  teacher.py  user.py  user_repository.py
src/routes/: login.py  student.py  teacher.py  user.py  user_route.py
src/schemas/: login.py  person.py  student.py  teacher.py  user.py
src/schemas/common/: address.py
src/schemas/response/: address_response.py  student_response.py  teacher_response.py  user_response.py
src/services/: login.py  student.py  teacher.py  user.py  user_service.py
