[project]
name = "school-management"
version = "0.1.0"
description = ""
authors = [
    {name = "Leandro Sousa Silva",email = "ordnael.sousass@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "pyjwt (>=2.12.1,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
